--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
 	<body>
-		<img src="blue-cow.png" />
+		<img src="cow.png" />
 		<img src="blue-barn.png" />
-		<img src="blue-pig.png" />
+		<img src="pig.png" />
 		<img src="blue-chicken.png" />
 		<img src="blue-rooster.png" />
-		<img src="yellow-goat.png" />
-		<img src="red-sheep.png" />
+		<img src="goat.png" />
+		<img src="sheep.png" />
 		<img src="horse.png" />
 		<img src="farmer.png" />
 		<img src="tractor.png" />
