added id tags to images links

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
 	<body>
-		<img src="cow.png" />
-		<img src="blue-barn.png" />
-		<img src="pig.png" />
-		<img src="blue-chicken.png" />
-		<img src="blue-rooster.png" />
-		<img src="goat.png" />
-		<img src="sheep.png" />
-		<img src="horse.png" />
-		<img src="farmer.png" />
-		<img src="tractor.png" />
-		<img src="hay-bale.png" />
-		<img src="plow.png" />
-		<img src="fence.png" />
+		<img src="cow.png" id="cow"/>
+		<img src="blue-barn.png" id="barn" />
+		<img src="pig.png" id="pig" />
+		<img src="blue-chicken.png" id="chicken" />
+		<img src="blue-rooster.png" id="rooster" />
+		<img src="goat.png" id="goat" />
+		<img src="sheep.png" id="sheep" />
+		<img src="horse.png" id="horse" />
+		<img src="farmer.png" id="farmer" />
+		<img src="tractor.png" id="tractor" />
+		<img src="hay-bale.png" id="haybale" />
+		<img src="plow.png" id="plow" />
+		<img src="fence.png" id="fence" />
 
 	</body>
 </html>
