--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<img src="cow.png" id="cow"/>
 		<img src="blue-barn.png" id="barn" />
 		<img src="pig.png" id="pig" />
-		<img src="blue-chicken.png" id="chicken" />
+		<img src="chickens.png" id="chicken" />
 		<img src="blue-rooster.png" id="rooster" />
 		<img src="goat.png" id="goat" />
 		<img src="sheep.png" id="sheep" />
