--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		<img src="tractor.png" id="tractor" />
 		<img src="hay-bale.png" id="haybale" />
 		<img src="plow.png" id="plow" />
-		<img src="fence.png" id="fence" />
+		<img src="fence.png" id="fence1" />
+		<img src="fence.png" id="fence2" />
+		<img src="fence.png" id="fence3" />
+		<img src="fence.png" id="fence4" />
 
 	</body>
 </html>
