--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<img src="fence.png" id="fence2" />
 		<img src="fence.png" id="fence3" />
 		<img src="fence.png" id="fence4" />
+		<img src="ufo.png" id="ufo" />
 
 	</body>
 </html>
