renamed smoke to fire

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<img src="fence.png" id="fence3" />
 		<img src="fence.png" id="fence4" />
 		<img src="ufo.png" id="ufo" />
-
+		<img src="jet.png" id="jet" />
+		<img src="fire.png" id="fire" />
 	</body>
 </html>
